--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,55 +3,80 @@ layout: default
 ---
 
 {%- if page.title -%}
-  <h1 class="page-heading">{{ page.title }}</h1>
+<h1 class="page-heading">{{ page.title }}</h1>
 {%- endif -%}
 
 {{ content }}
 
 {%- if site.posts.size > 0 -%}
-  <ul class="posts">
+<ul class="posts">
     <li class="posts-labelgroup" id="posts-labelgroup">
-      <h1 id="posts-label">posts</h1>
-      {% if site.plainwhite.search %}
-      <div class="search-container">
-        <div class="search-section">
-          <i class="icon-search"></i>
-          <input type="text" name="search" id="searchbar" autocomplete="off" aria-label="search in posts">
+        <h1 id="posts-label">posts</h1>
+        {% if site.plainwhite.search %}
+        <div class="search-container">
+            <div class="search-section">
+                <i class="icon-search"></i>
+                <input type="text" name="search" id="searchbar" autocomplete="off" aria-label="search in posts">
+            </div>
+            <div class="search-results" id="search-results" data-placeholder="No Results" style="display: none;"></div>
         </div>
-        <div class="search-results" id="search-results" data-placeholder="No Results" style="display: none;"></div>
-      </div>
-      {% endif %}
+        {% endif %}
     </li>
 
     {%- for post in site.posts -%}
-      <li>
+    <li>
         {%- assign date_format = site.plainwhite.date_format | default: "%b %-d, %Y" -%}
         <a class="post-link" href="{{ post.url | relative_url }}">
-          <h2 class="post-title">{{ post.title | escape }}</h2>
+            <h2 class="post-title">{{ post.title | escape }}</h2>
         </a>
         <div class="post-meta">
-          <div class="post-date">
-            <i class="icon-calendar"></i>
-            {{ post.date | date: date_format }}
-          </div>
-          {%- if post.categories.size > 0-%}
-          <ul class="post-categories">
-            {%- for tag in post.categories -%}
-            <li>{{ tag }}</li>
-            {%- endfor -%}
-          </ul>
-          {%- endif -%}
+            <div class="post-date">
+                <i class="icon-calendar"></i>
+                {{ post.date | date: date_format }}
+            </div>
+            {%- if post.categories.size > 0-%}
+            <ul class="post-categories">
+                {%- for tag in post.categories -%}
+                <li>{{ tag }}</li>
+                {%- endfor -%}
+            </ul>
+            {%- endif -%}
         </div>
         <div class="post">
-          {%- if site.show_excerpts -%}
+            {%- if site.show_excerpts -%}
             {{ post.excerpt }}
-          {%- endif -%}
+            {%- endif -%}
         </div>
-      </li>
+    </li>
     {%- endfor -%}
-  </ul>
+</ul>
 
-  <!-- <p class="feed-subscribe"><svg class="svg-icon orange">
-		<use xlink:href="{{ '/assets/minima-social-icons.svg#rss' | relative_url }}"></use>
-	</svg><a href="{{ "/feed.xml" | relative_url }}">Subscribe</a></p> -->
+<div class="site-category">
+    <ul class='cat1'>
+        <li>
+            <a href="/" class="ctext">Project</a>
+            <ul>
+                <li><a href="/category/Project" class="ctext">Testest</a></li>
+            </ul>
+        </li>
+        <li>
+            <a href="/" class="ctext">Study</a>
+            <ul>
+                <li><a href="/category/Tech_interview" class="ctext">Tech_interview</a></li>
+                <li><a href="/category/Blog" class="ctext">Git blog</a></li>
+            </ul>
+        </li>
+        <li>
+            <a href="/" class="ctext">AI tech(ºÎ½ºÆ®Ä·ÇÁ)</a>
+            <ul>
+                <li><a href="/category/ustage" class="ctext">U-Stage</a></li>
+            </ul>
+        </li>
+    </ul>
+</div>
+
+
+<!-- <p class="feed-subscribe"><svg class="svg-icon orange">
+      <use xlink:href="{{ '/assets/minima-social-icons.svg#rss' | relative_url }}"></use>
+  </svg><a href="{{ "/feed.xml" | relative_url }}">Subscribe</a></p> -->
 {%- endif -%}
