--- a/_sass/dark.scss
+++ b/_sass/dark.scss
@@ -6,14 +6,20 @@
 	color: $dark_text_color;
 	border-color: #e6e6e6;
 
-	.about{
+	.ctext {
+		color: $dark_text_color
+	}
+
+	.about {
 		img.light {
 			display: none;
 		}
+
 		img.dark {
 			display: inline;
 		}
 	}
+
 	.post p {
 		color: #ddd;
 	}
@@ -28,8 +34,8 @@
 	}
 
 	@import 'ext/solarized-dark';
-	.highlight, .highlight *
-	{
+
+	.highlight, .highlight * {
 		background-color: #00080a;
 		color: #93a1a1;
 	}
@@ -37,6 +43,7 @@
 	div.highlight-dark {
 		padding: 5px 20px;
 	}
+
 	pre.highlight-dark, code {
 		font-family: 'Consolas', Menlo, monospace;
 		line-height: 1.4em;
@@ -53,16 +60,18 @@
 	a {
 		color: $dark_link_color;
 	}
+
 	#title a {
 		color: #fff;
+
 		&:hover {
 			color: $dark_link_color;
 		}
 	}
 
 	.posts-labelgroup {
-
 		border-bottom: 1px solid #333;
+
 		.search-results {
 			background-color: #333;
 
