--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,22 +9,23 @@ layout: default
 <div class="site-category">
     <ul class='cat1'>
         <li>
+            <a href="/" class="ctext">Daily</a>
+            <ul>
+                <li><a href="/category/Daily" class="ctext">Daily</a></li>
+            </ul>
+        </li>
+        <li>
+            <a href="/" class="ctext">Paper_review</a>
+            <ul>
+                <li><a href="/category/Event_based_vision" class="ctext">Event_based_vision</a></li>
+                <li><a href="/category/Style_transfer" class="ctext">Style_transfer</a></li>
+                <li><a href="/category/Diffusion" class="ctext">Diffusion</a></li>
+            </ul>
+        </li>
+        <li>
             <a href="/" class="ctext">Project</a>
             <ul>
-                <li><a href="/category/Project" class="ctext">Testest</a></li>
-            </ul>
-        </li>
-        <li>
-            <a href="/" class="ctext">Study</a>
-            <ul>
-                <li><a href="/category/Tech_interview" class="ctext">Tech_interview</a></li>
-                <li><a href="/category/Blog" class="ctext">Git blog</a></li>
-            </ul>
-        </li>
-        <li>
-            <a href="/" class="ctext">AI tech(ºÎ½ºÆ®Ä·ÇÁ)</a>
-            <ul>
-                <li><a href="/category/ustage" class="ctext">U-Stage</a></li>
+                <li><a href="/category/IULab" class="ctext">IULab</a></li>
             </ul>
         </li>
     </ul>
