--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -53,26 +53,19 @@ layout: default
 
 <div class="site-category">
     <ul class='cat1'>
-        <li>
-            <a href="/" class="ctext">/"
-Daily
-            </a>
-            /"
+        <li><a href="/" class="ctext">Daily</a>
             <ul>
-                /"
-                <li><a href="/category/Daily" class="ctext">aiDaily/l</a></li>
+                <li><a href="/category/Daily" class="ctext">Daily</a></li>
             </ul>
         </li>
-        <li>
-            <a href="/" class="ctext">Paper_review</a>
+        <li><a href="/" class="ctext">Paper_review</a>
             <ul>
                 <li><a href="/category/Event_based_vision" class="ctext">Event_based_vision</a></li>
                 <li><a href="/category/Style_transfer" class="ctext">Style_transfer</a></li>
                 <li><a href="/category/Diffusion" class="ctext">Diffusion</a></li>
             </ul>
         </li>
-        <li>
-            <a href="/" class="ctext">Project</a>
+        <li><a href="/" class="ctext">Project</a>
             <ul>
                 <li><a href="/category/IULab" class="ctext">IULab</a></li>
             </ul>
