import category.scss

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@ layout: default
         <li>
             <a href="/" class="ctext">Daily</a>
             <ul>
-                <li><a href="/category/Daily" class="ctext">Daily</a></li>
+                <li><a href="/category/K" class="ctext">Daily</a></li>
             </ul>
         </li>
         <li>
